# django-google-health

./: .gitignore  CLAUDE.md  README.md  manage.py  pyproject.toml
demo/: admin.py  settings.py  urls.py  views.py
demo/templates/demo/: home.html
demo/templates/registration/: login.html
docs/google-health/: codelabs-make-your-first-api-call.md  data-types.md  get-started.md  migration-parity-tool.md  migration.md  reference-rest.md  scopes.md  support.md  webhooks.md
googlehealth/: admin.py  apps.py  client.py  constants.py  ingest.py  models.py  oauth.py  schemas.py  signals.py  urls.py  views.py  webhooks.py
googlehealth/management/commands/: create_google_health_subscriber.py  delete_google_health_subscriber.py  list_google_health_subscribers.py  sync_google_health.py
googlehealth/migrations/: 0001_initial.py
tests/: conftest.py  settings.py  test_client.py  test_command_sync.py  test_constants.py  test_ingest.py  test_models.py  test_oauth.py  test_views.py  test_webhooks.py  urls.py
