[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-google-health"
version = "0.0.1"
description = "A Django app for the Google Health API (successor to the Fitbit Web API), backed by django-healthdatamodel."
readme = "README.md"
authors = [
    { name = "Andy Reagan", email = "andy@andyreagan.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.10"
dependencies = [
    "django",
    "django-healthdatamodel>=0.4.0",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "httpx",
    "pydantic>=2",
    "python-dateutil",
]

[project.urls]
Homepage = "https://github.com/andyreagan/django-google-health"
Repository = "https://github.com/andyreagan/django-google-health"
Issues = "https://github.com/andyreagan/django-google-health/issues"

[tool.hatch.build.targets.wheel]
packages = ["googlehealth"]

[dependency-groups]
dev = [
    "anyio[trio]",
    "pytest",
    "pytest-asyncio",
    "pytest-django",
    "pytest-freezer",
    "respx",
    "responses",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
asyncio_mode = "auto"
markers = [
    "live: requires real Google OAuth credentials in env (GOOGLE_HEALTH_TEST_*)",
]
